--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "house-of-style",
+  "homepage": "https://ofrilim.github.io/house-of-style/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,6 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://ofrilim.github.io/house-of-style/"
+  }
 }
