--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "house-of-style",
-  "homepage": "https://ofrilim.github.io/house-of-style/",
+  "homepage": "https://ofrilim.github.io/house-of-style.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
