--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "gh-pages": "^3.1.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
+    "react-material-ui-carousel": "^2.2.1",
+    "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
     "video-react": "^0.14.1",
     "web-vitals": "^1.0.1"
